Fix: prevent line wrapping in css, not code.

--- a/styles/route-panel.less
+++ b/styles/route-panel.less
@@ -75,6 +75,7 @@
       }
 
       .endpoint-name {
+        white-space: nowrap;
         overflow-x: hidden;
         text-overflow: ellipsis;
         width: 100%;
